fix the nav bar and added a logo

--- a/main/templates/main/dashboard.html
+++ b/main/templates/main/dashboard.html
@@ -6,12 +6,15 @@
 
     
 
-<div class="min-h-screen flex items-start justify-center mt-20 px-4">
-  <div class="w-full max-w-7xl bg-white border border-[#899ea9] text-[#334155] p-10 rounded-2xl shadow-2xl">
+<div class="flex flex-col min-w-4xl py-24  gap-8 font-primary text-left px-32">
+    <div class="flex flex-col gap-2">
+        <h2 class="text-3xl  font-[600] text-atb-g-900 font-primary">Dashboard</h2>
+        <p class="text-atb-g-600">test test test testing a test for a test, the test is here.</p>
+    </div>
     
-    <h2 class="text-3xl font-bold text-center mb-8 text-black font-inter ">Dashboard</h2>
-
-
+    <hr class="border-atb-g-200">
+    
+    <div class="text-[#334155] px*32">
     <div class="grid grid-cols-3 gap-4 max-w-4xl mx-auto">
 
         <!-- Row 1 -->
