--- a/theme/templates/nav-items/admin.html
+++ b/theme/templates/nav-items/admin.html
@@ -1,10 +1,10 @@
-<li class="hover:text-[#a60000] border-r border-[#899ea9] pr-6">
+<li class="hover:text-[#a60000]  pr-6">
     <a href="{% url 'dashboard' %}">Dashboard</a>
 </li>
-<li class="hover:text-[#a60000] border-r border-[#899ea9] pr-6">
+<li class="hover:text-[#a60000]  pr-6">
     <a href="/admin/">Admin</a>
 </li>
 
-<li class="hover:text-[#a60000] border-r border-[#899ea9] pr-6">
+<li class="hover:text-[#a60000]  pr-6">
     <a href="{% url 'requests:request-list' %}">Request History</a>
 </li>
