--- a/devices/templates/devices/device_list.html
+++ b/devices/templates/devices/device_list.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="min-h-screen flex items-start justify-center mt-20 px-4 bg-mint-500">
+<div class="min-h-screen flex items-start justify-center mt-20 px-4 bg-atb-g-50">
     <div class="w-full max-w-2xl bg-white border border-[#899ea9] text-[#334155] p-6 rounded-2xl shadow-lg" style="box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);">
         
         <h2 class="text-3xl font-bold text-center mb-8 text-black">Devices List</h2>
