--- a/theme/templates/nav-items/guest.html
+++ b/theme/templates/nav-items/guest.html
@@ -1,3 +1,3 @@
-<li class="hover:text-[#a60000] border-r border-[#899ea9] pr-6">
+<li class="hover:text-[#a60000] pr-6">
     <a href="{% url 'accounts:login' %}">Login</a>
 </li>
