--- a/theme/templates/nav-bar.html
+++ b/theme/templates/nav-bar.html
@@ -1,5 +1,5 @@
 <nav class="bg-white text-black py-4 min-h-[56px] border-b-1 border-atb-g-200 font-semibold">
-<ul class="flex justify-between items-center px-16 space-x-6 text-base">
+<ul class="flex justify-between items-center px-16 space-x-6 font-primary text-[18px] font-semibold">
     <!-- Left side -->
     <div class="flex items-center text-atb-g-600 gap-8">
         <img class="w-16" src="https://upload.wikimedia.org/wikipedia/ar/1/14/Arab_Tunisian_Bank_logo.gif" alt="">
