--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -6,24 +6,50 @@
     --font-primary : "Inter", sans-serif;
 
 
-  /* Purple Spectrum */
-  --color-atb-p-50: #F9F5FF;
-  --color-atb-p-100: #F4EBFF;
-  --color-atb-p-200: #E9D7FE;
-  --color-atb-p-300: #D6BBFB;
-  --color-atb-p-400: #B692F6;
-  --color-atb-p-500: #9E77ED;
+    /* Primary */
+    --color-atb-p-50:  #F9F5FF;
+    --color-atb-p-100: #F4EBFF;
+    --color-atb-p-200: #E9D7FE;
+    --color-atb-p-300: #D6BBFB;
+    --color-atb-p-400: #B692F6;
+    --color-atb-p-500: #9E77ED;
+    --color-atb-p-600: #8F002B;
   
-  /* Gray Spectrum */ 
-  --color-atb-g-50: #F9FAFB;
-  --color-atb-g-100: #F2F4F7;
-  --color-atb-g-200: #EAECF0;
-  --color-atb-g-300: #D0D5DD;
-  --color-atb-g-400: #98A2B3;
-  --color-atb-g-500: #667085;
-  --color-atb-g-600: #475467;
-  --color-atb-g-900: #101828;
+    /* Gray */ 
+    --color-atb-g-50:  #F9FAFB;
+    --color-atb-g-100: #F2F4F7;
+    --color-atb-g-200: #EAECF0;
+    --color-atb-g-300: #D0D5DD;
+    --color-atb-g-400: #98A2B3;
+    --color-atb-g-500: #667085;
+    --color-atb-g-600: #475467;
+    --color-atb-g-700: #344054;
+    --color-atb-g-800: #1D2939;
+    --color-atb-g-900: #101828;
 
+    /* Error */
+    --color-atb-e-50:  #FEF3F2;
+    --color-atb-e-100: #FEE4E2;
+    --color-atb-e-200: #FECDCA;
+    --color-atb-e-300: #FDA29B;
+    --color-atb-e-400: #F97066;
+    --color-atb-e-500: #F04438;
+
+    /* Warning */
+    --color-atb-w-50:  #FDB022;
+    --color-atb-w-100: #FEF0C7;
+    --color-atb-w-200: #FEDF89;
+    --color-atb-w-300: #FEC84B;
+    --color-atb-w-400: #FDB022;
+    --color-atb-w-500: #F79009;
+
+    /* Success */
+    --color-atb-s-50:  #FEF0C7;
+    --color-atb-s-100: #FEDF89;
+    --color-atb-s-200: #FEC84B;
+    --color-atb-s-300: #FDB022;
+    --color-atb-s-400: #F79009;
+    --color-atb-s-500: #12B76A;
 }
 /**
   * A catch-all path to Django template files, JavaScript, and Python files
